--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "npm run lite",
     "lite": "lite-server",
     "mod2": "lite-server --baseDir=\"mod2_solution\" ",
-    "mod3": "lite-server --baseDir=\"mod3_solution\" "
+    "mod3": "lite-server --baseDir=\"mod3_solution\" ",
+    "mod4": "lite-server --baseDir=\"mod4_solution\" "
   },
   "repository": {
     "type": "git",
